# libp2p-clipboard-sync

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: clipboard.rs  main.rs
