[package]
name = "libp2p-clipboard-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libp2p = { version = "0.56.0", features = ["tokio", "mdns", "gossipsub", "identify", "macros", "noise", "tcp", "yamux", "quic"] }
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
# Clipboard support
arboard = "3.4"
image = "0.25"